# accountingkits

./: LICENSE  README.md  VERSION.txt  demo.ipynb  demo.py  demo_fuzzymatch.ipynb  demo_fuzzymatch.py  demo_njit.py  demo_timeout_decorator.py  pydemo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
AccountingKits/: __init__.py
AccountingKits/DataClean/: MergeConcatT.py
AccountingKits/OSKit/: DirectoryT.py
AcctPack/: __init__.py
AcctPack/DataClean/: CurlApiT.py  FuzzyMatchT.py  NaDupOutlierT.py  SliceSelectT.py  StringT.py  __init__.py
AcctPack/Stats/: SummarizeT.py  __init__.py
AcctPack/_BasicFunc/: DecoratorF.py  __init__.py
accounting_kits/: __init__.py
accounting_kits/OSKit/: __init__.py
accountingkits/: __init__.py  _version.py
accountingkits/CrawlerApi/: ApiT.py  CrawlerT.py  WayBackT.py  __init__.py
accountingkits/DataClean/: CurlApiT.py  FuzzyMatchT.py  ReaderT.py  StringT.py
accountingkits/DataPrepare/: CurlApiT.py  DataBaseT.py  FuzzyMatchT.py  MergeConcatT.py  NaDupOutlierT.py  ReaderT.py  SliceSelectT.py  StringT.py  __init__.py
accountingkits/OSKit/: DirectoryT.py  InternetsT.py  __init__.py
accountingkits/Stats/: SummarizeT.py
accountingkits/WaybackScraper/: JsonConverterT.py  WayBackT.py  WaybkJsonToCsvT.py  __init__.py  cls_WayBack.py  cls_Wayback.py
accountingkits/_BasicFunc/: ArrayLikeF.py  MultiprocessF.py  __init__.py
accountingkits/_BasicTools/: ArrayLikeT.py  DataBaseT.py  DecoratorT.py  MatrixLikeT.py  MultiprocessT.py  NjitT.py  WebT.py  __init__.py
accountingkits/_BasicTools/_numbapack/: __init__.py  funcfactory.py
