[metadata]
name = accountingkits
author = zhang qihang
author_email = 694499657@qq.com
description = The kit-package which made for accounting science research
long_description  = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/qihangZH/accountingkits


[options]
packages = find:
requires-python = ">=3.7"
;install_requires =
;    certifi
;    numpy
;    pandas
;    pathos
;    requests
;    python-Levenshtein
;    thefuzz
;    rapidfuzz
;    sas7bdat
;    nltk
;    beautifulsoup4
;    fake-useragent
;    Cython
